# otterworks

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .trivyignore  AGENTS.md  ARCHITECTURE.md  CICD_SECURITY_AUDIT_PLAN.md  DEEP_SECURITY_AUDIT.md  EXPLOITATION_EVIDENCE.md  Makefile  README.md  REMEDIATION_REPORT.md  THREAT_ANALYSIS.md  docker-compose.infra.yml  docker-compose.lambda-lam1.override.yml  docker-compose.yml  sonar-project.properties
.devin/: blueprint.yaml
api/: build.gradle
configuration/: build.gradle  pom.xml
demo-platform/: .gitignore  README.md
docs/: AWS_EKS_SETUP.md  BATCH-USAGE-ROLLUP.md  CICD_SECURITY_AUDIT_PLAN.md  CI_STRATEGY.md  EVENT_DRIVEN_SECURITY.md  MULTI-TENANT-DEMO-PLAN.md  MULTI-TENANT-RUNBOOK.md  SDLC-COVERAGE.md  api-route-matrix.md  demo-workflow.md  exploratory-qa-report.md  fake-demo-file.md  flows.md  security-auto-remediation.md
etl/: .env.example  ETL_UPGRADE_GUIDE.md  config.ini  crontab  requirements.txt  run.sh
oracle-forms/: README.md
playbooks/: deep-security-audit.md
rest-openehr/: build.gradle  settings.gradle
scripts/: bug-catalog.yaml  deploy-dev.sh  deploy-tenant.sh  enable-dns-tls.sh  init-db.sql  inject-bug.sh  install-deploy-tools.sh  localstack-init.sh  localstack-restore.sh  run-usage-rollup.sh  seed-data.sh  seed.py  seed_tenant.py  spinup-dev.sh  teardown-dev.sh  teardown-tenant.sh  tenant-platform-baseline.sh  tenant-scale.sh  trivy-issues.sh
seed-data/: README.md  org-structure.yaml
service/: build.gradle  pom.xml  settings.gradle
services/document-service/: .editorconfig  Dockerfile  DocumentService.csproj  Program.cs  alembic.ini  appsettings.json  pyproject.toml
services/document-service/Tests/DocumentService.Tests/: DocumentService.Tests.csproj  TestWebApplicationFactory.cs
services/document-service/Tests/DocumentService.Tests/Unit/: CommentsApiTests.cs  DocumentServiceTests.cs  DocumentsApiTests.cs  HealthTests.cs  TemplatesApiTests.cs
services/document-service/alembic/: env.py
services/document-service/alembic/versions/: 001_initial_schema.py
services/document-service/app/: config.py  errors.py  main.py
services/document-service/app/api/: comments.py  documents.py  health.py  templates.py
services/document-service/app/db/: aurora.py  session.py
services/document-service/app/models/: document.py
services/document-service/app/schemas/: document.py
services/document-service/app/services/: document_service.py  event_publisher.py
services/document-service/src/Config/: AwsSettings.cs  JwtSettings.cs  RedisSettings.cs
services/document-service/src/Controllers/: CommentsController.cs  DocumentsController.cs  TemplatesController.cs
services/document-service/src/DTOs/: DocumentDtos.cs
services/document-service/src/Data/: DocumentDbContext.cs
services/document-service/src/Middleware/: ErrorHandlingMiddleware.cs  RequestLoggingMiddleware.cs  SecurityHeadersMiddleware.cs
services/document-service/src/Models/: Comment.cs  Document.cs  DocumentVersion.cs  Template.cs
services/document-service/src/Services/: DocumentService.cs  IDocumentService.cs  IEventPublisher.cs  SnsEventPublisher.cs
services/document-service/src/Validators/: DocumentValidators.cs
services/document-service/tests/: conftest.py  test_comments_api.py  test_document_service.py  test_documents_api.py  test_event_publisher.py  test_health.py  test_pure_logic.py  test_templates_api.py
services/file-service/: .editorconfig  Cargo.toml  Dockerfile  FileService.csproj  GlobalUsings.cs  Program.cs  appsettings.json  stylecop.json
services/file-service/.cargo/: tarpaulin.toml
services/file-service/Tests/: FileService.Tests.csproj
services/file-service/Tests/Unit/: EventPublisherTests.cs  HealthEndpointTests.cs  MetadataParsingTests.cs  ModelTests.cs  S3StorageServiceTests.cs  SecurityHeadersMiddlewareTests.cs
services/file-service/src/: config.rs  errors.rs  events.rs  handlers.rs  lib.rs  main.rs  metadata.rs  middleware.rs  models.rs  search.rs  storage.rs
services/file-service/src/Config/: AwsSettings.cs
services/file-service/src/Controllers/: FileEndpoints.cs
services/file-service/src/Middleware/: ErrorHandlingMiddleware.cs  RequestLoggingMiddleware.cs  SecurityHeadersMiddleware.cs
services/file-service/src/Models/: FileMetadata.cs  FileShare.cs  FileVersion.cs  Folder.cs  Requests.cs  Responses.cs
services/file-service/src/Services/: DynamoDbMetadataService.cs  IEventPublisher.cs  IMetadataService.cs  IS3StorageService.cs  S3StorageService.cs  SnsEventPublisher.cs
services/file-service/tests/: config_test.rs  models_test.rs
services/sample-service/: .coveragerc  Dockerfile  README.md  pyproject.toml
services/sample-service/app/: config.py  main.py
services/sample-service/app/api/: health.py  items.py
services/sample-service/app/db/: session.py
services/sample-service/app/models/: item.py
services/sample-service/app/schemas/: item.py
services/sample-service/app/services/: event_publisher.py  sample_service.py
services/sample-service/tests/: conftest.py  test_health.py  test_items_api.py
(+1641 files in other folders)
