[tool.poetry]
name = "document-service"
version = "0.1.0"
description = "OtterWorks Document Service - Document CRUD, versioning, and content management"
authors = ["OtterWorks Engineering"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-exporter-otlp = "^1.23.0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
prometheus-fastapi-instrumentator = "^7.0.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
boto3 = "^1.34.0"
PyJWT = "^2.8.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^5.0.0"
ruff = "^0.3.4"
mypy = "^1.9.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
