[tool.poetry]
name = "document-service"
version = "0.1.0"
description = "OtterWorks Document Service - Document CRUD, versioning, and content management"
authors = ["OtterWorks Engineering"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.139.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.14.2"
structlog = "^24.1.0"
opentelemetry-api = "^1.29.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-exporter-otlp = "^1.29.0"
opentelemetry-instrumentation-fastapi = ">=0.50b0,<1.0.0"
prometheus-fastapi-instrumentator = "^8.0.2"
python-multipart = "^0.0.32"
httpx = "^0.27.0"
boto3 = "^1.34.0"
PyJWT = "^2.13.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.0.0"
ruff = "^0.3.4"
mypy = "^1.9.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
