[tool.poetry]
name = "sample-service"
version = "0.1.0"
description = "OtterWorks Sample Service - Minimal CRUD reference service for owned sample items"
authors = ["OtterWorks Engineering"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
starlette = ">=1.3.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-exporter-otlp = "^1.23.0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
python-multipart = ">=0.0.30,<0.1.0"
httpx = "^0.27.0"
boto3 = "^1.34.0"
PyJWT = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^5.0.0"
ruff = "^0.3.4"
mypy = "^1.9.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
